style.css
body {
	background-color: #202124;
	font-family: arial, sans-serif;
	color: #bdc1c6;
	margin: 0;
	padding: 0;
}

header {
	display: flex;
	justify-content: flex-end;
	width: 100%;
	height: 50px;
	margin: 15px 15px 0 0;
}

a {
	color: #fff;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

header > div {
	padding: 10px;
}

.user {
	border-radius: 50%;
	height: 30px;
	width: 30px;
	margin-top: -7px;
}

.user:hover {
	cursor: pointer;
}
footer {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	position: fixed;
	bottom: 0;
	background-color: #171717;
}

.nationality {
	width: 100%;
	border-bottom: 1px #212327 solid;
}

.setings {
	display: grid;
	width: 100%;
	grid-template-columns: 1fr auto 1fr;
}

.flex {
	display: flex;
	flex-wrap: wrap;
}

.flex-end {
	display: flex;
	flex-wrap: wrap;
	justify-content: end;
}

.center {
	text-align: center;
}

.click:hover {
	text-decoration: underline;
	cursor: pointer;
}

.click {
	padding: 15px;
}

.main {
	display: flex;
	flex-direction: column;
	height: 50vh;
	justify-content: center;
	align-items: center;
}

.logo {
	display: block;
	margin-top: auto;
}

.logoSmall {
	height: 24px;
	position: fixed;
	left: 15px;
}

.logoWraper {
	position: relative;
	margin-top: auto;
}

.graphics {
	color: #4487f6;
	font: 16px/16px roboto-regular, arial, sans-serif;
	position: absolute;
	left: 215px;
	bottom: 0;
}

.loupe {
	height: 15px;
	width: 15px;
	padding-left: 10px;
	display: block;
}

.searchWraper {
	border-radius: 20px;
	margin: 30px;
	border: 1px solid #5f6368;
	width: 580px;
	display: flex;
	justify-content: stretch;
	align-items: center;
	height: 40px;
}

.serach {
	background-color: #202124;
	margin: 3px 10px 3px 10px;
	border: none;
	color: #fff;
	width: 100%;
	height: 50%;
}

.serach:focus-visible {
	outline: 0;
}

.buttons input[type="submit"] {
	background-color: #303134;
	border: 1px solid #303134;
	border-radius: 4px;
	color: #fff;
	padding: 10px 16px 10px 16px;
	margin-right: 20px;
}

.buttons input[type="submit"]:hover {
	border-color: #fff;
}

.buttons {
	display: flex;
	justify-content: center;
	color: #fff !important;
}

.advanced {
	color: #f28b82;
	padding: 25px 35px;
	font-size: 20px;
	border-bottom: 1px solid #3c4043;
}

.label {
	min-width: 160px;
	width: 16%;
}

form .serachMini {
	min-width: 160px;
	width: 50%;
	border: 1px solid #5f6368;
	height: 30px;
}

form .serachMini:focus-visible {
	border: 1px solid #4d90fe;
}

form .searchSuperMini {
	min-width: 80px;
	width: 50%;
}

.description {
	font-size: 11px;
	width: 32%;
	min-width: 160px;
}

.bigFont {
	font-size: 20px;
	font-weight: bold;
	color: #fff;
}

form div .noBorder {
	border-width: 0;
}

form .superMiniWraper {
	min-width: 160px;
	width: 50%;
	display: flex;
	align-items: center;
}

.buttonBlue {
	background: #8ab4f8;
	border: 1px solid #8ab4f8;
	color: #202124;
	padding: 5px 10px;
}
.blueWraper {
	width: 50%;
	display: flex;
	justify-content: right;
}

.buttonBlue:hover {
	background: #aecbfa;
}

.formAdvanced {
	border-bottom: 1px solid #3c4043;
	padding: 50px 0 20px 0;
	width: 70%;
	margin-left: 35px;
}

.labelWraper {
	display: flex;
	justify-content: left;
	align-items: center;
	margin: 10px 0;
}

